# lattice-boltzmann-rs

./: .gitignore  Cargo.toml  README.md  STATUS.md  TECHNICAL.md  example_config.json  example_cylinder.stl  quickstart.sh  small_config.json  test_config.json  ultra_high_res_config.json  ultra_high_res_cylinder.stl  vortex_config.json
examples/: generate_example_stl.rs  gpu_diagnostics.rs
src/: config.rs  geometry.rs  gpu.rs  lattice.rs  lib.rs  main.rs  output.rs  solver.rs
src/shaders/: boundary.wgsl  collision.wgsl  streaming.wgsl
