[package]
name = "lattice-boltzmann-rs"
version = "0.1.0"
edition = "2024"

[[example]]
name = "generate_example_stl"
path = "examples/generate_example_stl.rs"

[dependencies]
wgpu = "25.0"
pollster = "0.4"
bytemuck = { version = "1.23", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.33"
stl_io = "0.8"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
indicatif = "0.17"
